--- a/themes/etch/layouts/partials/header.html
+++ b/themes/etch/layouts/partials/header.html
@@ -9,5 +9,5 @@
             {{- end }}
         </ul>
     </nav>
-    <h3>{{ .Site.Params.Description }}</h3>
+    <small>{{ .Site.Params.Description }}</small>
 </header>
