--- a/themes/etch/layouts/partials/header.html
+++ b/themes/etch/layouts/partials/header.html
@@ -9,5 +9,5 @@
             {{- end }}
         </ul>
     </nav>
-    <small>{{ .Site.Params.Description }}</small>
+    <p><small>{{ .Site.Params.Description }}</small></p>
 </header>
