--- a/themes/etch/assets/css/main.css
+++ b/themes/etch/assets/css/main.css
@@ -106,6 +106,35 @@ header#banner nav ul li a {
     color: #454545;
 }
 
+.headerauthor {
+    display: flex;
+    float: right;
+    flex-direction: column;
+    padding: 5px;
+    margin: 0;
+}
+
+.headerauthor_pic {
+    margin: 0;
+    align-items: center;
+}
+
+.headerauthor_pic img {
+    max-width: 64px;
+    max-height: 64px;
+    border-radius: 50px;
+    border: 1px dashed darkslategrey;
+    pADDINg: 2px;
+    aspect-ratio: 1/1;
+    block-size: fit-content;
+}
+
+.headerauthor_desc {
+    margin: 0;
+    font-size: smaller;
+    align-items: center;
+}
+
 main#content {
     margin: 0 0 80px 0;
 }
